force-app/main/default/objects/ExportSettings__c/ExportSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Export Settings</label>
</CustomObject>