force-app/main/default/objects/ExportSettings__c/fields/CSVPerRecord__c.field-meta.xml
<CustomField>
    <fullName>CSVPerRecord__c</fullName>
    <label>CSV Per Record</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>