force-app/main/default/objects/ExportSettings__c/fields/RecordsPerBatch__c.field-meta.xml
<CustomField>
    <fullName>RecordsPerBatch__c</fullName>
    <label>Records Per Batch</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>