force-app/main/default/objects/ExportSettings__c/fields/Rows__c.field-meta.xml
<CustomField>
    <fullName>Rows__c</fullName>
    <label>Rows</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>